--- a/14_ProjetoPais/index.html
+++ b/14_ProjetoPais/index.html
@@ -21,12 +21,12 @@
       <!-- BOTÃO -->
 
       <div class="container input-group mb-3">
-        <input type="text" class="form-control" placeholder="Nome do País (Inglês)" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <input id="pais" type="text" class="form-control" placeholder="Nome do País (Inglês)" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="Procurar()" class="btn btn-outline-secondary bg-primary text-white" type="button" id="button-addon2"><strong>Procurar</strong></button>
       </div>
 
       <!-- CARDS -->
-      <div class="container text-center card text-dark" style="width: 18rem;">
+      <div id="card" class="container text-center card text-dark p-3" style="width: 18rem;">
         <img id="bandeira" src="..." class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" id="nome">Nome</h5>
