--- a/14_ProjetoPais/index.html
+++ b/14_ProjetoPais/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar bg-dark">
         <div>
           <a class="navbar-brand" href="#">
-            <img src="../12_Produto/imagens/logo.svg" alt="Bootstrap" width="100">
+            <img src="logo.svg" alt="Bootstrap" width="100">
           </a>
         </div>
       </nav>
