--- a/15_DesafioCCXP/index.html
+++ b/15_DesafioCCXP/index.html
@@ -10,14 +10,24 @@
     <header>
         <img src="imagens/logo.svg" alt="">
     </header>
-    <div id="reviva">
-        <h1>REVIVA O ÉPICO</h1>
-        <h2>DE 01 A 04 DE DEZEMBRO</h2>
-        <p>
-            Você consegue sentir? É aquela sensação de finalmente poder falar em voz alta: "estamos em casa". Sim, em dezembro de 2022, teremos a volta da CCXP física. Mas não será qualquer CCXP, vai ser a maior de todos os tempos. Prepare-se para visitar seus universos favoritos, explorar o Artists' Valley, se emocionar nos auditórios e encontrar aventuras épicas a cada passo pelos nossos corredores.
-        </p>
-    </div>
-    <div id="countdown">
+    <div id="container">
+        <div id="reviva">
+            <h1>REVIVA O ÉPICO</h1>
+            <h2>DE 01 A 04 DE DEZEMBRO</h2>
+            <p>
+                Você consegue sentir? É aquela sensação de finalmente poder falar em voz alta: "estamos em casa". Sim, em dezembro de 2022, teremos a volta da CCXP física. Mas não será qualquer CCXP, vai ser a maior de todos os tempos. Prepare-se para visitar seus universos favoritos, explorar o Artists' Valley, se emocionar nos auditórios e encontrar aventuras épicas a cada passo pelos nossos corredores.
+            </p>
+        </div>
+        <div id="contagem">
+            <h1>00D </h1>
+            <h1>00H </h1>
+            <h1>00M </h1>
+            <h1>00S </h1> 
+        </div>
+        <div id="video">
+            
+            <img src="imagens/arlequina.svg" alt="erro">
+        </div>
         
     </div>
     <script src="funcionalidades.js"></script>
